hotfix coger ruta para imagenes
Ahora se utiliza el metodo get de la clase Paths